fix navbar too big on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,14 @@ p {
     font-size: 9pt;
   }
   #home-text {
-    font-size: 24pt;
+    font-size: 26pt;
+  }
+}
+@media (max-width: 992px) {
+  .nav-item {
+    font-size: 1rem;
+    margin: 3px 5px;
+    padding: 0px 0px;
   }
 }
 /*
